Modifications to code

--- a/Open_Images_Dataset/CropImages.ipynb
+++ b/Open_Images_Dataset/CropImages.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,150 @@
     "print(cropCoords)\n",
     "croped_img = img.crop(cropCoords)\n",
     "display(croped_img)\n",
-    "croped_img.save(editedPath)"
+    "#croped_img.save(editedPath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>filepath</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>./bigCatsEdited/0_12483130855_129962c83e_o.jpg</td>\n",
+       "      <td>Leopard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>./bigCatsEdited/1_11644447156_11e19cf159_o.jpg</td>\n",
+       "      <td>Leopard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>./bigCatsEdited/2_16643949158_a4bb01776c_o.jpg</td>\n",
+       "      <td>Leopard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>./bigCatsEdited/3_18089504933_5ae8770b38_o.jpg</td>\n",
+       "      <td>Leopard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>./bigCatsEdited/4_5546319570_a0a5d37b4b_o.jpg</td>\n",
+       "      <td>Leopard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5060</th>\n",
+       "      <td>./bigCatsEdited/5060_2097656877_6d5193cca0_o.jpg</td>\n",
+       "      <td>Tiger</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5061</th>\n",
+       "      <td>./bigCatsEdited/5061_12266437605_202e5c98db_o.jpg</td>\n",
+       "      <td>Tiger</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5062</th>\n",
+       "      <td>./bigCatsEdited/5062_3235685295_a19b171818_o.jpg</td>\n",
+       "      <td>Tiger</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5063</th>\n",
+       "      <td>./bigCatsEdited/5063_2825352510_2e09b351a7_o.jpg</td>\n",
+       "      <td>Tiger</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5064</th>\n",
+       "      <td>./bigCatsEdited/5064_2360927487_67a2071ec8_o.jpg</td>\n",
+       "      <td>Tiger</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5065 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               filepath    class\n",
+       "0        ./bigCatsEdited/0_12483130855_129962c83e_o.jpg  Leopard\n",
+       "1        ./bigCatsEdited/1_11644447156_11e19cf159_o.jpg  Leopard\n",
+       "2        ./bigCatsEdited/2_16643949158_a4bb01776c_o.jpg  Leopard\n",
+       "3        ./bigCatsEdited/3_18089504933_5ae8770b38_o.jpg  Leopard\n",
+       "4         ./bigCatsEdited/4_5546319570_a0a5d37b4b_o.jpg  Leopard\n",
+       "...                                                 ...      ...\n",
+       "5060   ./bigCatsEdited/5060_2097656877_6d5193cca0_o.jpg    Tiger\n",
+       "5061  ./bigCatsEdited/5061_12266437605_202e5c98db_o.jpg    Tiger\n",
+       "5062   ./bigCatsEdited/5062_3235685295_a19b171818_o.jpg    Tiger\n",
+       "5063   ./bigCatsEdited/5063_2825352510_2e09b351a7_o.jpg    Tiger\n",
+       "5064   ./bigCatsEdited/5064_2360927487_67a2071ec8_o.jpg    Tiger\n",
+       "\n",
+       "[5065 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = lambda a: \"./bigCatsEdited/\"+str(a.name)+\"_\"+urlToFilename(a.OriginalURL)\n",
+    "g = lambda a: a.Class\n",
+    "training_dataframes = files.apply([f,g],axis=1)\n",
+    "training_dataframes.columns = ['filepath','class']\n",
+    "training_dataframes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "filepath    ./bigCatsEdited/1001_2440974847_cb8e6b2289_o.jpg\n",
+       "class                                                Cheetah\n",
+       "Name: 1001, dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_dataframes.iloc[1001]"
    ]
   }
  ],
