--- a/Open_Images_Dataset/DownloadEverything.ipynb
+++ b/Open_Images_Dataset/DownloadEverything.ipynb
@@ -13,7 +13,8 @@
     "'''\n",
     "WARNING: This is a lot of data and used\n",
     "to just download the data. All the big cat related\n",
-    "csv files are already included in bigCatsCsv.\n",
+    "csv files are already included in bigCatsCsv folder and the\n",
+    "2nd to last cell can download everything.\n",
     "'''\n",
     "\n",
     "#THIS IS TRAINING DATA AND CLASSIFICATION ITEMS\n",
